...
            Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                _buildIconButton(
                  icon: Icons.directions,
                  tooltip: 'Get directions',
                  key: const Key('get_directions_button'),
                  onPressed: widget.onGetDirections,
                ),
                const SizedBox(width: 10),
                _buildIconButton(
                  icon: Icons.map,
                  tooltip: 'Indoor map',
...
